Add document upload for engagement context extraction (Issue #1)
Engagement context often already exists in document form (SOWs, project briefs,
prior assessments) and shouldn't need to be re-entered by hand. This adds a
"Document Upload" tab to the engagement creation flow that lets admins upload
PDFs and text files, stores them in Cloudflare R2, and sends them to Claude
for automatic Description and Context extraction.

Infrastructure: R2 bucket binding (DOCUMENTS_R2), engagement_documents table
with processing status tracking, 4 new DB functions for document CRUD.

AI integration: New extract_engagement_context tool schema. Claude receives
PDFs natively as base64 document blocks and text files as text blocks, returning
structured description, context, and per-document summaries.

Backend: 3 new admin API endpoints — multipart upload with 10MB/PDF+TXT
validation, fire-and-forget extraction via waitUntil (matching existing pattern),
and document listing for status polling. Concurrent extraction guard prevents
duplicate processing.

Frontend: Third creation tab with drag-and-drop dropzone, file list management,
4-step async flow (create engagement → upload → extract → poll), and status
spinner during extraction.

--- a/public/admin.html
+++ b/public/admin.html
@@ -50,6 +50,7 @@
     <div class="tabs">
       <button class="tab active" onclick="switchCreateTab('manual')">Manual</button>
       <button class="tab" onclick="switchCreateTab('monday')">Monday.com Import</button>
+      <button class="tab" onclick="switchCreateTab('document')">Document Upload</button>
     </div>
 
     <!-- Manual creation -->
@@ -97,6 +98,30 @@
           <button class="btn btn-secondary" onclick="showView('list')">Cancel</button>
           <button class="btn btn-primary" onclick="createFromMonday()">Create Engagement</button>
         </div>
+      </div>
+    </div>
+
+    <!-- Document upload -->
+    <div id="create-document" class="card hidden">
+      <div class="form-group">
+        <label for="doc-eng-name">Engagement Name *</label>
+        <input type="text" id="doc-eng-name" placeholder="e.g., Acme Corp Digital Transformation">
+      </div>
+      <div class="dropzone" id="dropzone" onclick="document.getElementById('file-input').click()">
+        <input type="file" id="file-input" multiple accept=".pdf,.txt,.text" style="display:none" onchange="handleFileSelect(this.files)">
+        <p><strong>Drop files here</strong> or click to browse</p>
+        <p class="text-sm text-muted">PDF and text files, up to 10MB each</p>
+      </div>
+      <div id="file-list" class="mt-4"></div>
+      <div id="extraction-status" class="mt-4 hidden">
+        <div class="summary-generating">
+          <div class="spinner"></div>
+          <p class="text-muted" id="extraction-status-text">Uploading documents...</p>
+        </div>
+      </div>
+      <div class="flex gap-2 mt-4">
+        <button class="btn btn-secondary" onclick="showView('list')">Cancel</button>
+        <button class="btn btn-primary" id="doc-upload-btn" onclick="createFromDocuments()">Upload & Extract</button>
       </div>
     </div>
   </div>
