Broaden document upload to accept all text-based file types
The upload tab previously only accepted PDF and .txt/.text files. Users needed
to upload other text-based formats (.md, .vtt, .csv, .json, .xml, .yaml, etc.)
which the extraction logic already handled as UTF-8 text. Replaced the strict
MIME whitelist with a three-way check (application/pdf, text/* MIME prefix, or
known text extension fallback) across frontend validation, backend validation,
and the HTML file input. Updated help text and error messages accordingly.

--- a/public/admin.html
+++ b/public/admin.html
@@ -108,9 +108,9 @@
         <input type="text" id="doc-eng-name" placeholder="e.g., Acme Corp Digital Transformation">
       </div>
       <div class="dropzone" id="dropzone" onclick="document.getElementById('file-input').click()">
-        <input type="file" id="file-input" multiple accept=".pdf,.txt,.text" style="display:none" onchange="handleFileSelect(this.files)">
+        <input type="file" id="file-input" multiple style="display:none" onchange="handleFileSelect(this.files)">
         <p><strong>Drop files here</strong> or click to browse</p>
-        <p class="text-sm text-muted">PDF and text files, up to 10MB each</p>
+        <p class="text-sm text-muted">PDF and text-based files (.md, .vtt, .csv, etc.), up to 10MB each</p>
       </div>
       <div id="file-list" class="mt-4"></div>
       <div id="extraction-status" class="mt-4 hidden">
