Add engagement deletion with cascading cleanup of all related data
Previously there was no way to remove an engagement once created. Added a
DELETE /api/admin/engagements/:id endpoint that performs full cascading
cleanup: fetches session IDs and document R2 keys, deletes KV session
state entries, removes R2 document objects, then cascade-deletes DB rows
(discovery_results, sessions, engagement_documents, engagements) in
FK-safe order. The admin UI shows a red "Delete Engagement" button in the
detail view header with a confirmation dialog before proceeding.

--- a/public/admin.html
+++ b/public/admin.html
@@ -128,7 +128,10 @@
 
   <!-- Engagement Detail -->
   <div id="detail-screen" class="container-wide hidden">
-    <button class="btn btn-secondary btn-sm mb-4" onclick="showView('list')">&larr; Back</button>
+    <div class="flex-between mb-4">
+      <button class="btn btn-secondary btn-sm" onclick="showView('list')">&larr; Back</button>
+      <button class="btn btn-danger btn-sm" onclick="deleteEngagement()">Delete Engagement</button>
+    </div>
 
     <div id="detail-header"></div>
 
